# flext-quality

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DUPLICATION-DETECTION.md  Dockerfile  Dockerfile.new  HOOK_WARNINGS.md  LICENSE  LOGGING_MIGRATION.md  Makefile  PLUGIN-ARCHITECTURE.md  README.md  RULE_MODIFICATION.md  TESTING_WARNING_SYSTEM.md  TODO.md  USAGE_EXAMPLES.md  base.mk  check_detected_issues.py  code_analyzer.sqlite3  conftest.py  coverage.xml  custom.mk  custom.mk.rej  docker-compose.validation.yml  docker-compose.yml  getting-started.md  index.md  manage.py  mkdocs.yml  mypy_test.ini  nohup.out  pyproject.toml  pyproject.toml.backup.20250619_210432  requirements.txt  setup.cfg  sonar-project.properties  start_all.sh  start_celery.sh  start_redis.sh  (+3 more)
.cache/: wms_cache.db
.github/: dependabot.yml
.github/workflows/: ci.yml  code-analysis.yml  deploy.yml  docs-maintenance.yml  release.yml
.scope/: config.toml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  development_commands.md  project_overview.md  task_completion_workflow.md  tech_stack_and_architecture.md
analyzer/: __init__.py  admin.py  analysis_engine.py  apps.py  cli.py  health.py  models.py  multi_backend_analyzer.py  package_discovery.py  report_generator.py  serializers.py  signals.py  tasks.py  urls.py  views.py
analyzer/backends/: __init__.py  ast_backend.py  base.py  external_backend.py  quality_backend.py
analyzer/management/: __init__.py
analyzer/migrations/: 0001_initial.py  __init__.py
architecture/: README.md
architecture/c4-model/: README.md
archive/ai-generated/: CLAUDE.md
cli/: README.md
code_analyzer_web/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/: README.md
dashboard/: __init__.py  apps.py  charts.py  urls.py  views.py
dashboard/templatetags/: __init__.py  dashboard_extras.py
dc_code_analyzer/: __init__.py  analyzer  code_analyzer_web
development/: contributing.md
docker/: Dockerfile.enterprise  Dockerfile.fixed  Dockerfile.simple  Dockerfile.standalone
docs/: DUPLICATION-DETECTION.md  HOOK_WARNINGS.md  PLUGIN-ARCHITECTURE.md  README.md  RULE_MODIFICATION.md  TESTING_WARNING_SYSTEM.md  TODO.md  getting-started.md  index.md  quick-start.md
docs/api/: README.md
docs/api-reference/: README.md
docs/architecture/: README.md
docs/development/: README.md  contributing.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/integration/: README.md
docs/maintenance/: DOCS_MAINTENANCE_ROADMAP.md  MAINTENANCE_PROCEDURES.md  METADATA_INVENTORY.md  README.md  dashboard.py  demo.py  docs-maintenance-roadmap.md  maintenance-procedures.md  metadata-inventory.md  notifications.py  scheduled_maintenance.py  test_refactoring.py  tooling-audit.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
docs/standards/: python-module-organization.md  version-management.md
examples/: README.md
examples/batch_operations/: README.md
flext_quality_web/: manage.py
flext_quality_web/analyzer/: __init__.py  admin.py  analysis_engine.py  health.py  models.py  multi_backend_analyzer.py  package_discovery.py  report_generator.py  tasks.py  urls.py  views.py
flext_quality_web/dashboard/: charts.py  views.py
flext_quality_web/settings/: __init__.py  asgi.py  celery.py  settings.py  wsgi.py
flext_quality_web/templates/: base.html
guides/: README.md  configuration.md  development.md  getting-started.md  testing.md  troubleshooting.md
reports/: bandit.json  pytest.xml  security.json
scripts/: README.md  manage.py
scripts/check/: workspace_check.py
scripts/dependencies/: modernize_pyproject.py  sync_extra_paths_from_deps.py  sync_internal_deps.py
scripts/hooks/: after_agent_response.py  after_agent_thought.py  after_file_edit.py  after_mcp.py  after_shell.py  after_tab_file_edit.py  before_mcp.py  before_prompt.py  before_shell.py  before_tab_file_read.py
src/dc_code_analyzer/: __init__.py
src/flext_quality/: __init__.py  __init__.pyi  __main__.py  __version__.py  _config.py  _exports.py  _exports_lazy_part_01.py  _exports_lazy_part_02.py  _settings.py  analysis_service.py  analysis_types.py  analyzer.py  api.py  ast_backend.py  ast_class_info.py  ast_function_info.py  backend_type.py  base.py  base_service.py  cli.py  cli_helpers.py  cli_new.py  code_transformer.py  command_strategies.py  config.py  constants.py  container.py  entities.py  exceptions.py  external_backend.py  fields.py  grade_calculator.py  handlers.py  integrations.py  issue_service.py  legacy.py  metrics.py  models.py  ports.py  project_service.py  (+14 more)
templates/: __version__.py.template
templates/dashboard/: analysis_overview.html  backend_issues_report.html  base.html  create_project.html  hierarchical_report.html  home.html  packages.html  project_detail.html  projects_list.html  run_analysis.html
templates/reports/: base_report.html  quality_overview.html  summary_report.html
tests/: README.md  __init__.py  base.py  conftest.py  conftest.py.broken  conftest_project.py  constants.py  models.py  protocols.py  settings.py  test_analyzer.py  test_analyzer_comprehensive.py  test_analyzer_edge_cases.py  test_analyzer_functional.py  test_api.py  test_application_services.py  test_ast_backend_additional.py  test_backends.py  test_basic.py  test_check_detected_issues.py  test_cli.py  test_cli_comprehensive.py  test_cli_functional.py  test_config.py  test_container.py  test_di_container.py  test_domain_entities.py  test_exceptions.py  test_external_backend.py  test_external_backend_more.py  test_flext_quality.py  test_handlers.py  test_handlers_integration.py  test_metrics.py  test_reports.py  test_repositories.py  test_repositories.py.disabled  test_services.py  test_services_comprehensive.py  test_services_error_scenarios.py  (+8 more)
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  assertions.py  constants.py  models.py  protocols.py  typing_helpers.py  typings.py
(+257 files in other folders)
