[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "pydantic (>=2.12.3)",
        "pydantic-settings (>=2.11.0)",
        "pyright (>=1.1.406)",
        "mypy (>=1.18.2)",
        "typer (>=0.12.3)",
        "rich (>=14.2.0,<15.0.0)",
        "pydantic-core (>=2.41.4)",
        "fastapi (>=0.115.0)",
        "uvicorn (>=0.30.0)",
        "libcst (>=1.8.6,<2.0.0)",
        "pyyaml (>=6.0.3,<7.0.0)",
        "fastmcp (>=2.14.2,<3.0.0)",
        "httpx (>=0.28.0)",
        "click (>=8.1.0)",
        "pytest (>=9.0.2,<10.0.0)",
        "wrapt (>=1.17.0,<2.0.0)",
        "referencing (>=0.28.4,<0.37.0)",
    ]
    description = "FLEXT Quality - Unified orchestration platform for Claude Code tooling"
    keywords = [
        "adapter",
        "enterprise",
        "flext",
        "integration",
        "typed",
    ]
    name = "flext-quality"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.10.0-dev"
    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext"
        Repository    = "https://github.com/flext-sh/flext"

    [project.optional-dependencies]
        tools = [
            "ruff>=0.12.3",
            "mypy>=1.18.2",
            "bandit>=1.8.0",
            "pylint>=3.3.0",
            "black>=25.1.0",
            "isort>=6.0.1",
            "coverage>=7.0.0",
            "pytest>=8.4.0",
            "radon>=6.0.1",
            "vulture>=2.13",
            "rope>=1.11.0",
            "refurb>=2.0.0",
            "complexipy>=4.0.2",
        ]

    [project.scripts]
        flext-quality = "flext_quality.services.cli:main"


[tool.pyrefly]
    search-path = ["src", "../flext-cli/src"]

[tool.django-stubs]
    django_settings_module = "code_analyzer_web.settings"

[tool.poetry]
    [[tool.poetry.packages]]
        from    = "src"
        include = "flext_quality"

[tool.deptry]
    known_first_party = [
        "flext_quality",
        "flext_core",
        "flext_auth",
        "flext_cli",
        "flext_observability",
        "flext_web",
    ]
    pep621_dev_dependency_groups = [
        "dev",
        "test",
        "typings",
        "docs",
    ]

[tool.deptry.package_module_name_map]
    pyyaml = "yaml"

[tool.deptry.per_rule_ignores]
    DEP002 = [
        # CLI tools (invoked from command line, not imported)
        "bandit",
        "black",
        "codespell",
        "commitizen",
        "complexipy",
        "coverage",
        "detect-secrets",
        "isort",
        "pip-audit",
        "pre-commit",
        "pylint",
        "pyrefly",
        "pyupgrade",
        "radon",
        "refurb",
        "rope",
        "ruff",
        "vulture",
        # Type stubs
        "types-psutil",
        "types-python-dateutil",
        "types-pyyaml",
        "types-redis",
        "types-requests",
        "types-setuptools",
        "types-toml",
        # Runtime deps used indirectly (via pydantic-settings, flext-core, etc.)
        "pydantic-core",
        "pytest",
        "pytest-cov",
        "wrapt",
        "referencing",
    ]

[tool.ruff]
    extend = "../ruff-shared.toml"

[tool.poetry.dependencies]
    python = ">=3.13,<3.14"
    flext-core = {path = "../flext-core", develop = true}
    flext-auth = {path = "../flext-auth", develop = true}
    flext-cli = {path = "../flext-cli", develop = true}
    flext-observability = {path = "../flext-observability", develop = true}
    flext-web = {path = "../flext-web", develop = true}

[tool.pytest.ini_options]
    addopts = [
        "--cov-branch",
        "--cov-fail-under=90",
        "--cov-report=html:reports/coverage",
        "--cov-report=term-missing:skip-covered",
        "--cov-report=xml:reports/coverage.xml",
        "--cov=flext_quality",
        "--maxfail=1",
        "--strict-config",
        "--strict-markers",
        "--tb=short",
        "-ra",
    ]
    markers = [
        "e2e: End-to-end tests",
        "integration: Integration tests",
        "slow: Slow tests",
        "smoke: Smoke tests",
        "unit: Unit tests",
    ]
    minversion = "8.0"
    testpaths = [
        "tests",
    ]

# Coverage inherits from workspace but with project-specific source
[tool.coverage.run]
    source = ["src/flext_quality"]
    branch = true

[tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        'if __name__ == "__main__":',
        "if TYPE_CHECKING:",
        "raise NotImplementedError",
        "@abstractmethod",
        '^\s*\.\.\.\s*$',
    ]

    [tool.ruff.lint.isort]
        known-first-party = [
            "flext_quality",
        ]

    [tool.poetry.group.dev.dependencies]
        autoflake      = ">=2.3.1"
        black          = ">=25.1.0"
        codespell      = ">=2.3.0"
        commitizen     = ">=4.8.3"
        detect-secrets = ">=1.5.0"
        isort          = ">=6.0.1"
        pre-commit     = ">=4.0.1"
        pylint         = ">=3.3.0"
        pyrefly        = "^0.46.3"
        pyupgrade      = ">=3.19.0"
        radon          = ">=6.0.1"
        ruff           = ">=0.12.3"
        vulture        = ">=2.13"
    refurb = "^2.2.0"
    complexipy = "^5.1.0"
    rope = "^1.14.0"
    docker = "^7.1.0"
    python-on-whales = "^0.79.0"
    pytest-cov = "^7.0.0"
    pytest = "^9.0.2"
    bandit = "^1.9.2"
    pip-audit = "^2.10.0"
    opentelemetry-api = ">=1.39.1"
    opentelemetry-sdk = ">=1.39.1"
    prompt-toolkit = ">=3.0.52"
    sqlparse = ">=0.5.5"

    [tool.poetry.group.test.dependencies]
        
factory-boy         = ">=3.3.1"
        faker               = ">=37.4.0"
        hypothesis          = ">=6.125.0"
        pytest              = ">=8.4.0"
        pytest-benchmark    = ">=5.1.0"
        pytest-clarity      = ">=1.0.1"
        pytest-cov = ">=7.0.0"
        pytest-deadfixtures = ">=2.2.1"
        pytest-env          = ">=1.1.5"
        pytest-mock         = ">=3.14.0"
        pytest-sugar        = ">=1.0.0"
        pytest-timeout      = ">=2.4.0"
        pytest-xdist        = ">=3.8.0"

    [tool.poetry.group.typings.dependencies]
        types-psutil          = ">=7.0.0"
        types-python-dateutil = ">=2.9.0"
        types-pyyaml          = ">=6.0.12"
        types-redis           = ">=4.6.0"
        types-requests        = ">=2.32.4"
        types-setuptools      = ">=80.9.0"
        types-toml            = ">=0.10.8.20240310"
            [tool.poetry.group.docs.dependencies]
mistune = ">=3.0.0"
marko = ">=2.0.0"
mdformat = ">=0.7.0"
mdformat-gfm = ">=0.3.0"
            linkcheckmd = ">=1.4.0"
            pymarkdownlnt = ">=0.9.0"

