[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "flext-quality"
version = "0.10.0-dev"
description = "FLEXT Quality - Unified orchestration platform for Claude Code tooling"
readme = "README.md"
keywords = [
  "adapter",
  "enterprise",
  "flext",
  "integration",
  "typed",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1",
  "fastapi>=0.115",
  "fastmcp>=2.14.2,<3",
  "httpx>=0.28",
  "libcst>=1.8.6,<2",
  "mypy>=1.18.2",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.11",
  "pyright>=1.1.406",
  "pyyaml>=6.0.3,<7",
  "referencing>=0.28.4,<0.37",
  "rich>=14.2,<15",
  "typer>=0.12.3",
  "uvicorn>=0.30",
  "wrapt>=1.17,<2"
]
optional-dependencies.tools = [
  "bandit>=1.8",
  "black>=25.1",
  "complexipy>=4.0.2",
  "coverage>=7",
  "isort>=6.0.1",
  "mypy>=1.18.2",
  "pylint>=3.3",
  "pytest>=8.4",
  "radon>=6.0.1",
  "refurb>=2",
  "rope>=1.11",
  "ruff>=0.12.3",
  "vulture>=2.13",
]
urls.Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext"
scripts.flext-quality = "flext_quality.services.cli:main"

[tool.poetry]
dependencies.python = ">=3.13,<3.14"
dependencies.flext-core = { path = "../flext-core", develop = true }
dependencies.flext-auth = { path = "../flext-auth", develop = true }
dependencies.flext-cli = { path = "../flext-cli", develop = true }
dependencies.flext-observability = { path = "../flext-observability", develop = true }
dependencies.flext-web = { path = "../flext-web", develop = true }
group.dev.dependencies.autoflake = ">=2.3.1"
group.dev.dependencies.black = ">=25.1.0"
group.dev.dependencies.codespell = ">=2.3.0"
group.dev.dependencies.commitizen = ">=4.8.3"
group.dev.dependencies.detect-secrets = ">=1.5.0"
group.dev.dependencies.isort = ">=6.0.1"
group.dev.dependencies.pre-commit = ">=4.0.1"
group.dev.dependencies.pylint = ">=3.3.0"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.pyupgrade = ">=3.19.0"
group.dev.dependencies.radon = ">=6.0.1"
group.dev.dependencies.ruff = ">=0.12.3"
group.dev.dependencies.vulture = ">=2.13"
group.dev.dependencies.refurb = "^2.2.0"
group.dev.dependencies.complexipy = "^5.1.0"
group.dev.dependencies.rope = "^1.14.0"
group.dev.dependencies.docker = "^7.1.0"
group.dev.dependencies.python-on-whales = "^0.79.0"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.bandit = "^1.9.2"
group.dev.dependencies.pip-audit = "^2.10.0"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"
group.docs.dependencies.mistune = ">=3.0.0"
group.docs.dependencies.marko = ">=2.0.0"
group.docs.dependencies.mdformat = ">=0.7.0"
group.docs.dependencies.mdformat-gfm = ">=0.3.0"
group.docs.dependencies.linkcheckmd = ">=1.4.0"
group.docs.dependencies.pymarkdownlnt = ">=0.9.0"
group.test.dependencies.factory-boy = ">=3.3.1"
group.test.dependencies.faker = ">=37.4.0"
group.test.dependencies.hypothesis = ">=6.125.0"
group.test.dependencies.pytest = ">=8.4.0"
group.test.dependencies.pytest-benchmark = ">=5.1.0"
group.test.dependencies.pytest-clarity = ">=1.0.1"
group.test.dependencies.pytest-cov = ">=7.0.0"
group.test.dependencies.pytest-deadfixtures = ">=2.2.1"
group.test.dependencies.pytest-env = ">=1.1.5"
group.test.dependencies.pytest-mock = ">=3.14.0"
group.test.dependencies.pytest-sugar = ">=1.0.0"
group.test.dependencies.pytest-timeout = ">=2.4.0"
group.test.dependencies.pytest-xdist = ">=3.8.0"
group.typings.dependencies.types-psutil = ">=7.0.0"
group.typings.dependencies.types-python-dateutil = ">=2.9.0"
group.typings.dependencies.types-pyyaml = ">=6.0.12"
group.typings.dependencies.types-redis = ">=4.6.0"
group.typings.dependencies.types-requests = ">=2.32.4"
group.typings.dependencies.types-setuptools = ">=80.9.0"
group.typings.dependencies.types-toml = ">=0.10.8.20240310"
packages = [ { from = "src", include = "flext_quality" } ]

[tool.ruff]
extend = "../ruff-shared.toml"

[tool.deptry]
known_first_party = [
  "flext_quality",
  "flext_core",
  "flext_auth",
  "flext_cli",
  "flext_observability",
  "flext_web",
]
pep621_dev_dependency_groups = [
  "dev",
  "test",
  "typings",
  "docs",
]
package_module_name_map.pyyaml = "yaml"
per_rule_ignores.DEP002 = [
  # CLI tools (invoked from command line, not imported)
  # Type stubs
  # Runtime deps used indirectly (via pydantic-settings, flext-core, etc.)
  "bandit",
  "black",
  "codespell",
  "commitizen",
  "complexipy",
  "coverage",
  "detect-secrets",
  "isort",
  "pip-audit",
  "pre-commit",
  "pylint",
  "pyrefly",
  "pyupgrade",
  "radon",
  "refurb",
  "rope",
  "ruff",
  "vulture",
  "types-psutil",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
  "types-requests",
  "types-setuptools",
  "types-toml",
  "pydantic-core",
  "pytest-cov",
  "wrapt",
  "referencing"
]

[tool.pytest]
ini_options.addopts = [ "--maxfail=1", "--strict-config", "--strict-markers", "--tb=short", "-ra" ]
ini_options.markers = [
  "e2e: End-to-end tests",
  "integration: Integration tests",
  "slow: Slow tests",
  "smoke: Smoke tests",
  "unit: Unit tests",
]
ini_options.minversion = "8.0"
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
run.branch = true
# Coverage inherits from workspace but with project-specific source
run.source = [ "src/flext_quality" ]
report.exclude_lines = [
  "@abstractmethod",
  "^\\s*\\.\\.\\.\\s*$",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
report.fail_under = 59

[tool.pyrefly]
search-path = [ "../typings", "../typings/generated", "src", "../flext-core/src", "../flext-cli/src" ]

[tool.django-stubs]
django_settings_module = "code_analyzer_web.settings"

[tool.bandit]
skips = [ "B404", "B603", "B607", "B105", "B608" ]
