[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

[project]
name = "flext-quality"
version = "0.12.0-dev"
description = "FLEXT Quality - Unified orchestration platform for Claude Code tooling"
readme = "README.md"
keywords = [
  "adapter",
  "enterprise",
  "flext",
  "integration",
  "typed",
]
license = "MIT"
maintainers = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
authors = [ { email = "team@flext.sh", name = "FLEXT Team" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1",
  "fastapi>=0.115",
  "fastmcp>=3,<4",
  "httpx>=0.28",
  "libcst>=1.8.6,<2",
  "mypy>=1.18.2",
  "pydantic>=2.12.3",
  "pydantic-core>=2.41.4",
  "pydantic-settings>=2.11",
  "pyright>=1.1.406",
  "pyyaml>=6.0.3,<7",
  "referencing>=0.28.4,<0.37",
  "rich>=14.2,<15",
  "typer>=0.12.3",
  "uvicorn>=0.30",
  "wrapt>=1.17,<2",
]
optional-dependencies.tools = [
  "bandit>=1.8",
  "black>=25.1",
  "complexipy>=4.0.2",
  "coverage>=7",
  "isort>=6.0.1",
  "mypy>=1.18.2",
  "pylint>=3.3",
  "pytest>=8.4",
  "radon>=6.0.1",
  "refurb>=2",
  "rope>=1.11",
  "ruff>=0.12.3",
  "vulture>=2.13",
]
urls.Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
urls.Homepage = "https://github.com/flext-sh/flext"
scripts.flext-quality = "flext_quality.services.cli:main"

[tool.poetry]
dependencies.python = ">=3.13,<3.14"
dependencies.flext-core = { path = "../flext-core", develop = true }
dependencies.flext-auth = { path = "../flext-auth", develop = true }
dependencies.flext-cli = { path = "../flext-cli", develop = true }
dependencies.flext-observability = { path = "../flext-observability", develop = true }
dependencies.flext-web = { path = "../flext-web", develop = true }
group.dev.dependencies.autoflake = ">=2.3.1"
group.dev.dependencies.black = ">=25.1.0"
group.dev.dependencies.codespell = ">=2.3.0"
group.dev.dependencies.commitizen = ">=4.8.3"
group.dev.dependencies.detect-secrets = ">=1.5.0"
group.dev.dependencies.isort = ">=6.0.1"
group.dev.dependencies.pre-commit = ">=4.0.1"
group.dev.dependencies.pylint = ">=3.3.0"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.pyupgrade = ">=3.19.0"
group.dev.dependencies.radon = ">=6.0.1"
group.dev.dependencies.ruff = ">=0.12.3"
group.dev.dependencies.vulture = ">=2.13"
group.dev.dependencies.refurb = "^2.2.0"
group.dev.dependencies.complexipy = "^5.1.0"
group.dev.dependencies.rope = "^1.14.0"
group.dev.dependencies.docker = "^7.1.0"
group.dev.dependencies.python-on-whales = "^0.79.0"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.bandit = "^1.9.2"
group.dev.dependencies.pip-audit = "^2.10.0"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"
group.docs.dependencies.mistune = ">=3.0.0"
group.docs.dependencies.marko = ">=2.0.0"
group.docs.dependencies.mdformat = ">=0.7.0"
group.docs.dependencies.mdformat-gfm = ">=0.3.0"
group.docs.dependencies.linkcheckmd = ">=1.4.0"
group.docs.dependencies.pymarkdownlnt = ">=0.9.0"
group.test.dependencies.factory-boy = ">=3.3.1"
group.test.dependencies.faker = ">=37.4.0"
group.test.dependencies.hypothesis = ">=6.125.0"
group.test.dependencies.pytest = ">=8.4.0"
group.test.dependencies.pytest-benchmark = ">=5.1.0"
group.test.dependencies.pytest-clarity = ">=1.0.1"
group.test.dependencies.pytest-cov = ">=7.0.0"
group.test.dependencies.pytest-deadfixtures = ">=2.2.1"
group.test.dependencies.pytest-env = ">=1.1.5"
group.test.dependencies.pytest-mock = ">=3.14.0"
group.test.dependencies.pytest-sugar = ">=1.0.0"
group.test.dependencies.pytest-timeout = ">=2.4.0"
group.test.dependencies.pytest-xdist = ">=3.8.0"
group.typings.dependencies.types-psutil = ">=7.0.0"
group.typings.dependencies.types-python-dateutil = ">=2.9.0"
group.typings.dependencies.types-pyyaml = ">=6.0.12"
group.typings.dependencies.types-redis = ">=4.6.0"
group.typings.dependencies.types-requests = ">=2.32.4"
group.typings.dependencies.types-setuptools = ">=80.9.0"
group.typings.dependencies.types-toml = ">=0.10.8.20240310"
packages = [ { from = "src", include = "flext_quality" } ]

[tool.ruff]
extend = "../ruff-shared.toml"
lint.isort.known-first-party = [ "flext_quality" ]

[tool.codespell]
ignore-words-list = "dn,cn,ou,uid,sn,aci,acl,ldif,flext,FLEXT,dbt,oic,wms,grpc,meltano,protobuf,creds,assertIn"
skip = """\
  .git,*.lock,*.egg-info,dist,build,.venv,__pycache__,.mypy_cache,.pytest_cache,.ruff_cache,node_modules,vendor,*.pb2*.\
  py\
  """

[tool.deptry]
known_first_party = [
  "flext",
  "flext_quality",
]
package_module_name_map.pyyaml = "yaml"
pep621_dev_dependency_groups = [
  "dev",
  "docs",
  "security",
  "test",
  "typings",
]
per_rule_ignores.DEP002 = [
  # CLI tools (invoked from command line, not imported)
  # Type stubs
  # Runtime deps used indirectly (via pydantic-settings, flext-core, etc.)
  "bandit",
  "black",
  "codespell",
  "commitizen",
  "complexipy",
  "coverage",
  "detect-secrets",
  "isort",
  "pip-audit",
  "pre-commit",
  "pylint",
  "pyrefly",
  "pyupgrade",
  "radon",
  "refurb",
  "rope",
  "ruff",
  "vulture",
  "types-psutil",
  "types-python-dateutil",
  "types-pyyaml",
  "types-redis",
  "types-requests",
  "types-setuptools",
  "types-toml",
  "pydantic-core",
  "pytest-cov",
  "wrapt",
  "referencing",
]
exclude = [
  ".archive",
  ".git",
  ".meltano",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "htmlcov",
  "node_modules",
  "reports",
  "scripts",
  "tests",
  "vendor",
  "venv",
]
extend_exclude = [
  "flexcore/",
  "flext-.*/",
]

[tool.pytest]
ini_options.addopts = [
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "-p no:sugar",
  "-q",
  "-ra",
  "--timeout=30",
  "--timeout-method=signal",
  "--durations=0",
]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning:pyasn1(.*|$)",
]
ini_options.python_classes = [
  "Test*",
]
ini_options.python_files = [
  "*_test.py",
  "*_tests.py",
  "test_*.py",
]
ini_options.python_functions = [
  "test_*",
]
ini_options.pythonpath = [
  ".",
  "src",
]
ini_options.markers = [
  "docker: marca testes que requerem Docker",
  "e2e: marca testes como testes de integração end-to-end",
  "edge_cases: marca testes de casos extremos",
  "integration: marca testes como testes de integração",
  "integrity: marca testes de integridade",
  "oracle: marca testes específicos do Oracle",
  "performance: marca testes de performance",
  "resilience: marca testes de resiliência",
  "slow: marca testes como execução lenta",
  "stress: marca testes de stress",
  "unit: marca testes como testes unitários",
]
ini_options.minversion = "8.0"
ini_options.testpaths = [
  "tests/",
]

[tool.coverage]
run.branch = true
run.omit = [
  "*/__pycache__/*",
  "*/_pb2*.py",
  "*/conftest.py",
  "*/tests/*",
]
run.relative_files = true
run.source = [ "src/flext_quality" ]
# Coverage inherits from workspace but with project-specific source
report.exclude_lines = [
  "@abstractmethod",
  "^\\s*\\.\\.\\.\\s*$",
  "def __repr__",
  "def __str__",
  'if __name__ == "__main__":',
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
report.fail_under = 100
report.partial_branches = [
  "pragma: no branch",
]
report.precision = 2
report.show_missing = true
report.skip_empty = true
html.directory = "htmlcov"
xml.output = "coverage.xml"

[tool.pyrefly]
project-excludes = [ "**/*_pb2*.py", "**/*_pb2_grpc*.py" ]
search-path = ["..", "../typings", "../typings/generated", "src", "tests", "examples", "scripts"]

[tool.pyright]
enableTypeIgnoreComments = false
extraPaths = ["..", "src", "tests", "examples", "scripts", "../typings", "../typings/generated", "../flext-auth/src", "../flext-cli/src", "../flext-core/src", "../flext-observability/src", "../flext-web/src"]
include = [ "src", "scripts", "tests", "examples" ]
exclude = [
  "**/*.pb2.py",
  "**/*.pb2_grpc.py",
  ".git/",
  ".meltano/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "target/",
]
pythonPlatform = "Linux"
pythonVersion = "3.13"
reportAssertAlwaysTrue = false
reportCallInDefaultInitializer = "error"
reportCallIssue = "error"
reportConstantRedefinition = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportGeneralTypeIssues = "error"
reportImplicitRelativeImport = false
reportImplicitStringConcatenation = "warning"
reportImportCycles = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeForm = false
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingParameterType = "error"
reportMissingSuperCall = "warning"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = "warning"
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportPrivateUsage = false
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "error"
reportTypedDictNotRequiredAccess = "error"
reportUnboundVariable = "error"
typeCheckingMode = "strict"
reportUninitializedInstanceVariable = "warning"
reportUnknownArgumentType = false
reportUnknownLambdaType = "error"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "warning"
reportUnusedClass = "warning"
reportUnusedCoroutine = "error"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
useLibraryCodeForTypes = true

[tool.django-stubs]
django_settings_module = "code_analyzer_web.settings"

[tool.bandit]
skips = [ "B404", "B603", "B607", "B105", "B608" ]
exclude_dirs = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "node_modules",
  "tests",
  "vendor",
]

[tool.complexipy]
max_complexity = 15
output_format = "plain"

[tool.vulture]
exclude = [
  ".*/examples/",
  ".*/scripts/",
  ".*/tests/",
  ".coverage.*",
  ".git/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "__pycache__/",
  "build/",
  "dist/",
  "node_modules/",
  "tests/",
  "vendor/",
]
min_confidence = 80
paths = [
  "**/src",
  "src",
]
sort_by_size = true
verbose = false
